--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-	"name": "create-litium-headless",
-	"version": "1.0.0",
-	"main": "index.js",
-	"license": "MIT",
-	"devDependencies": {
-		"command-exists": "^1.2.9",
-		"cross-env": "^7.0.3"
-	},
-	"scripts": {
-		"build": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node index.js"
-	}
+    "name": "create-litium-headless",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "devDependencies": {
+        "command-exists": "^1.2.9",
+        "cross-env": "^7.0.3",
+        "standard-version": "^9.5.0"
+    },
+    "bin": "./index.js",
+    "scripts": {
+        "build": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node index.js",
+        "release": "standard-version && git push --follow-tags && npm publish"
+    }
 }
