--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "create-litium-headless",
     "author": "Hayo",
-    "version": "1.2.0",
+    "version": "0.0.1",
     "main": "index.js",
     "license": "MIT",
     "devDependencies": {
@@ -16,6 +16,6 @@
     "bin": "./index.js",
     "scripts": {
         "build": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node index.js",
-        "release": "standard-version && git push --follow-tags && npm publish"
+        "release": "standard-version && git push --follow-tags && npm publish --registry https://registry.npmjs.org/"
     }
 }
