fix: name of pkg

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "create-litium-headless",
+    "name": "create-litium-accelerator",
     "author": "Hayo",
     "version": "0.0.2",
     "main": "index.js",
