--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "main": "index.js",
     "license": "MIT",
     "devDependencies": {
-        "command-exists": "^1.2.9",
-        "cross-env": "^7.0.3",
         "standard-version": "^9.5.0"
+    },
+    "dependencies": {
+        "command-exists": "^1.2.9",
+        "cross-env": "^7.0.3"
     },
     "repository": {
         "type": "git",
