--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "standard-version": "^9.5.0"
     },
     "dependencies": {
+        "chalk": "^5.3.0",
         "command-exists": "^1.2.9"
     },
     "repository": {
